--- a/prow/cluster/jobs/aspenmesh/proxy/istio.proxy.release-1.5.gen.yaml
+++ b/prow/cluster/jobs/aspenmesh/proxy/istio.proxy.release-1.5.gen.yaml
@@ -17,7 +17,14 @@ postsubmits:
       containers:
       - command:
         - entrypoint
-        - ./prow/proxy-postsubmit.sh  
+        - ./prow/proxy-postsubmit.sh 
+        env:
+          - name: DOCKER_REPOSITORY
+            value: prow-cicd/envoy
+          - name: GCS_ARTIFACTS_BUCKET
+            value: am-istio-prow
+          - name: GCS_BUILD_BUCKET
+            value: am-istio-prow         
         image: gcr.io/istio-testing/build-tools-proxy:release-1.5-2020-03-24T16-54-03
         name: ""
         resources:
@@ -134,14 +141,7 @@ presubmits:
     spec:
       containers:
       - command:
-        - ./prow/proxy-presubmit-release.sh
-        env:
-          - name: BAZEL_BUILD_RBE_INSTANCE
-            value: projects/prow-cicd/instances/default_instance
-          - name: ENVOY_PREFIX
-            value: envoy-wasm
-          - name: ENVOY_REPOSITORY
-            value: https://github.com/envoyproxy/envoy-wasm        
+        - ./prow/proxy-presubmit-release.sh       
         image: gcr.io/istio-testing/build-tools-proxy:release-1.5-2020-03-24T16-54-03
         name: ""
         resources:
