--- a/prow/cluster/jobs/aspenmesh/proxy/istio.proxy.release-1.5.gen.yaml
+++ b/prow/cluster/jobs/aspenmesh/proxy/istio.proxy.release-1.5.gen.yaml
@@ -19,6 +19,8 @@ postsubmits:
         - entrypoint
         - ./prow/proxy-postsubmit.sh 
         env:
+          - name: LOCAL_BUILD
+            value: true
           - name: DOCKER_REPOSITORY
             value: prow-cicd/envoy
           - name: GCS_ARTIFACTS_BUCKET
@@ -141,7 +143,10 @@ presubmits:
     spec:
       containers:
       - command:
-        - ./prow/proxy-presubmit-release.sh       
+        - ./prow/proxy-presubmit-release.sh
+        env:
+          - name: LOCAL_BUILD
+            value: true       
         image: gcr.io/istio-testing/build-tools-proxy:release-1.5-2020-03-24T16-54-03
         name: ""
         resources:
