--- a/prow/cluster/jobs/aspenmesh/proxy/istio.proxy.release-1.5.gen.yaml
+++ b/prow/cluster/jobs/aspenmesh/proxy/istio.proxy.release-1.5.gen.yaml
@@ -20,7 +20,7 @@ postsubmits:
         - ./prow/proxy-postsubmit.sh 
         env:
           - name: LOCAL_BUILD
-            value: true
+            value: "true"
           - name: DOCKER_REPOSITORY
             value: prow-cicd/envoy
           - name: GCS_ARTIFACTS_BUCKET
@@ -146,7 +146,7 @@ presubmits:
         - ./prow/proxy-presubmit-release.sh
         env:
           - name: LOCAL_BUILD
-            value: true       
+            value: "true"       
         image: gcr.io/istio-testing/build-tools-proxy:release-1.5-2020-03-24T16-54-03
         name: ""
         resources:
