--- a/prow/cluster/jobs/aspenmesh/release-builder/istio.release-builder.release-1.6.gen.yaml
+++ b/prow/cluster/jobs/aspenmesh/release-builder/istio.release-builder.release-1.6.gen.yaml
@@ -30,7 +30,7 @@ postsubmits:
         securityContext:
           privileged: true
       nodeSelector:
-        testing: test-pool
+        testing: build-pool
   - annotations:
       testgrid-alert-email: istio-oncall@googlegroups.com
       testgrid-dashboards: istio_release-1.6_release-builder_postsubmit
@@ -60,7 +60,7 @@ postsubmits:
         securityContext:
           privileged: true
       nodeSelector:
-        testing: test-pool
+        testing: build-pool
   - annotations:
       testgrid-alert-email: istio-oncall@googlegroups.com
       testgrid-dashboards: istio_release-1.6_release-builder_postsubmit
@@ -90,7 +90,7 @@ postsubmits:
         securityContext:
           privileged: true
       nodeSelector:
-        testing: test-pool
+        testing: build-pool
   - annotations:
       testgrid-alert-email: istio-oncall@googlegroups.com
       testgrid-dashboards: istio_release-1.6_release-builder_postsubmit
@@ -127,7 +127,7 @@ postsubmits:
         securityContext:
           privileged: true
       nodeSelector:
-        testing: test-pool
+        testing: build-pool
   - annotations:
       testgrid-alert-email: istio-oncall@googlegroups.com
       testgrid-dashboards: istio_release-1.6_release-builder_postsubmit
@@ -170,7 +170,7 @@ postsubmits:
         securityContext:
           privileged: true
       nodeSelector:
-        testing: test-pool
+        testing: build-pool
   - annotations:
       testgrid-alert-email: istio-oncall@googlegroups.com
       testgrid-dashboards: istio_release-1.6_release-builder_postsubmit
@@ -213,7 +213,7 @@ postsubmits:
         securityContext:
           privileged: true
       nodeSelector:
-        testing: test-pool
+        testing: build-pool
 presubmits:
   istio/release-builder:
   - always_run: true
@@ -244,7 +244,7 @@ presubmits:
         securityContext:
           privileged: true
       nodeSelector:
-        testing: test-pool
+        testing: build-pool
   - always_run: true
     annotations:
       testgrid-dashboards: istio_release-1.6_release-builder
@@ -273,7 +273,7 @@ presubmits:
         securityContext:
           privileged: true
       nodeSelector:
-        testing: test-pool
+        testing: build-pool
   - always_run: true
     annotations:
       testgrid-dashboards: istio_release-1.6_release-builder
@@ -302,7 +302,7 @@ presubmits:
         securityContext:
           privileged: true
       nodeSelector:
-        testing: test-pool
+        testing: build-pool
   - always_run: false
     annotations:
       testgrid-dashboards: istio_release-1.6_release-builder
@@ -333,7 +333,7 @@ presubmits:
         securityContext:
           privileged: true
       nodeSelector:
-        testing: test-pool
+        testing: build-pool
   - always_run: false
     annotations:
       testgrid-dashboards: istio_release-1.6_release-builder
@@ -368,7 +368,7 @@ presubmits:
         securityContext:
           privileged: true
       nodeSelector:
-        testing: test-pool
+        testing: build-pool
   - always_run: false
     annotations:
       testgrid-dashboards: istio_release-1.6_release-builder
@@ -398,4 +398,4 @@ presubmits:
         securityContext:
           privileged: true
       nodeSelector:
-        testing: test-pool
+        testing: build-pool
