Fix release 1.5 job (#17)
* Remove invalid files from job-config

* Fix publish release GCS_BUCKET value

--- a/prow/cluster/jobs/aspenmesh/release-builder/istio.release-builder.release-1.5.gen.yaml
+++ b/prow/cluster/jobs/aspenmesh/release-builder/istio.release-builder.release-1.5.gen.yaml
@@ -154,7 +154,7 @@ postsubmits:
         - release/build.sh
         env:
           - name: GCS_BUCKET
-            value: am-istio-prow/release
+            value: am-istio-prow/prerelease
           - name: DOCKER_HUB
             value: docker.io/dexchen
           - name: PRERELEASE_DOCKER_HUB
