Revert "Use aspenbot for github user of tide (#20)" (#21)
This reverts commit 9a43fbad53ce54f8e7c900b1bc379de28c8276d7.

--- a/prow/config.yaml
+++ b/prow/config.yaml
@@ -61,7 +61,7 @@ deck:
   rerun_auth_configs:
     '*':
       github_users:
-      -aspenbot 
+      - dex80526
       github_team_slugs:
       - org: aspenmesh
         slug: maintainers
